force-app/main/default/objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <label>Venue</label>
    <pluralLabel>Venues</pluralLabel>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>40인 규모 스몰웨딩 식당 후보를 비교/랭킹하기 위한 오브젝트. Meets_Capacity__c와 Score__c는 페르소나 인터뷰에서 나온 우선순위(수용인원 &gt; 음식 평점 &gt; 주차 &gt; 가격 &gt; 교통)를 그대로 가중치로 반영한다.</description>
</CustomObject>