force-app/main/default/objects/Venue__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>주소</label>
    <type>Text</type>
    <length>255</length>
    <description>상세 주소. 답사/예약 연결 시 참고용</description>
</CustomField>