force-app/main/default/objects/Venue__c/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <label>위치 좌표</label>
    <type>Location</type>
    <scale>6</scale>
    <description>Experience Cloud 인터랙티브 지도(lightning-map)에 핀을 표시하기 위한 위경도. 신규 Venue 입력 시 위경도도 함께 조사해서 채워야 한다.</description>
</CustomField>