force-app/main/default/objects/Venue__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>지역(구)</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <description>서울시 자치구. 마포구 거주 페르소나 기준 이동 거리 판단용</description>
</CustomField>