force-app/main/default/objects/Venue__c/fields/FoodRating__c.field-meta.xml
<CustomField>
    <fullName>FoodRating__c</fullName>
    <label>음식 평점</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>1</scale>
    <required>true</required>
    <description>네이버 플레이스 등 평점(0~5)</description>
</CustomField>