force-app/main/default/objects/Venue__c/fields/MatchScore__c.field-meta.xml
<CustomField>
    <fullName>MatchScore__c</fullName>
    <label>기본 점수</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <formula>(30 - MIN(PricePerPerson__c / 10000, 30))
+ (FoodRating__c / 5 * 25)
+ (MIN(25, ParkingSlots__c / 30 * 20) + IF(ParkingFee__c = 0, 5, 0))
+ (20 - MIN(StationWalkMin__c, 20))</formula>
    <description>Venue 고유의 절대 점수(가격30+음식25+주차25+교통20, 만점100). 특정 신부의 우선순위와 무관한 고정값. 개인화된 순위는 Flow에서 이 값과 별개로 PersonalizedScore를 실행 시점에 재계산한다.</description>
</CustomField>