force-app/main/default/objects/Venue__c/fields/MaxCapacity__c.field-meta.xml
<CustomField>
    <fullName>MaxCapacity__c</fullName>
    <label>최대 수용인원</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>