force-app/main/default/objects/Venue__c/fields/ParkingFee__c.field-meta.xml
<CustomField>
    <fullName>ParkingFee__c</fullName>
    <label>주차비</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>0이면 무료. 시간당/1회 비용(원)</description>
</CustomField>