force-app/main/default/objects/Venue__c/fields/ParkingSlots__c.field-meta.xml
<CustomField>
    <fullName>ParkingSlots__c</fullName>
    <label>주차 가능 대수</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>확인 안 되면 0으로 입력(정보없음 처리)</description>
</CustomField>