force-app/main/default/objects/Venue__c/fields/PricePerPerson__c.field-meta.xml
<CustomField>
    <fullName>PricePerPerson__c</fullName>
    <label>1인당 예상 비용</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
    <description>대관료+식대 합산 근사치(원)</description>
</CustomField>