force-app/main/default/objects/Venue__c/fields/PrivateRoom__c.field-meta.xml
<CustomField>
    <fullName>PrivateRoom__c</fullName>
    <label>독립공간 여부</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>