force-app/main/default/objects/Venue__c/fields/ReviewCount__c.field-meta.xml
<CustomField>
    <fullName>ReviewCount__c</fullName>
    <label>리뷰 수</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>네이버 플레이스 리뷰 개수</description>
</CustomField>