force-app/main/default/objects/Venue__c/fields/Source_Notes__c.field-meta.xml
<CustomField>
    <fullName>Source_Notes__c</fullName>
    <label>조사 메모/출처</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>블로그/지도/인스타 DM 등 조사 출처와 특이사항 기록</description>
</CustomField>