force-app/main/default/objects/Venue__c/fields/StationWalkMin__c.field-meta.xml
<CustomField>
    <fullName>StationWalkMin__c</fullName>
    <label>최인접역 도보(분)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>