force-app/main/default/objects/Venue__c/fields/VenueType__c.field-meta.xml
<CustomField>
    <fullName>VenueType__c</fullName>
    <label>장소 유형</label>
    <type>Lookup</type>
    <referenceTo>VenueType__c</referenceTo>
    <relationshipLabel>Venues</relationshipLabel>
    <relationshipName>Venues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>레스토랑/웨딩홀/카페/야외 중 주된 성격 하나</description>
</CustomField>