force-app/main/default/objects/Venue__c/listViews/All_Venues.listView-meta.xml
<ListView>
    <fullName>All_Venues</fullName>
    <label>전체 후보</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>VenueType__c</columns>
    <columns>District__c</columns>
    <columns>MaxCapacity__c</columns>
    <columns>IsEligible__c</columns>
    <columns>FoodRating__c</columns>
    <columns>ParkingSlots__c</columns>
    <columns>PricePerPerson__c</columns>
    <columns>StationWalkMin__c</columns>
    <columns>MatchScore__c</columns>
</ListView>